2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in ($IGNORE_PATTERN): Improve for multi-line matches.
	($RULE_PATTERN): Use that from `&make_paragraphs'.
	($MACRO_PATTERN): Just catch the name of a macro.
	($BOGUS_MACRO_PATTERN): Remove.
	($ASSIGNMENT_PATTERN): New.
	(&file_contents_internal, &make_paragraphs): Adjust.
	(&macro_define): Catch bad macro names.
	(&cond_stack_endif): Better error message.
	(&file_contents_internal): Don't remove backslashes in variable
	values.
	(&macro_define): Do it for `+=' user variables.
	(&define_standard_variables): Use `undef' instead of a dummy
	variable.
	(&make_paragraph): Be sure not to chop the trail of hash only
	lines: adjust the `##' regexp.
	(&rule_define): Fix a bug: don't read $1 but $target.
	* tests/condincl.test: Strengthen.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attributes `Name' and `config_vars'.
	(&finish): Work properly if there is no _finish.
	(Automake): Register language Names and AC_SUBST dependencies.
	Register Fortran 77 variables upon which ratfor and ppf77 depend.
	(&handle_languages): Once per language, invoke
	`define_linker_variables', and check its config_vars.
	(&lang_cxx_finish, &lang_f77_finish, &lang_objc_finish)
	(&lang_java_finish): Remove.
	(&lang_ppf77_finish, &lang_ratfor_finish): Adjust.

	
2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents_internal): Accept $IS_AM.
	(&handle_compile, &define_standard_variables, &file_contents): Adjust.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (am_install_var): Use `next' instead of `if' on the
	body of $X loop.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attributes `lder' and `ld'.
	(&register_language): Specify for cxx, objc, f77, gcj.
	(&define_linker_variable): New.
	(&lang_cxx_finish, &lang_f77_finish, &lang_objc_finish)
	(&lang_java_finish): Adjust.
	(&libtool_compiler): Remove.

2001-05-08  Akim Demaille  <akim@epita.fr>
