@@ -1,5 +1,12 @@
 2001-05-08  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&file_contents_internal): Apply the @cond_stack to
+	the rules and assignments.
+	Don't rely on `$.' as it's biased by &make_paragraphs.
+	Don't remove backslashes in variable values.
+
+2001-05-08  Akim Demaille  <akim@epita.fr>
+
 	* automake.in ($IGNORE_PATTERN): Improve for multi-line matches.
 	($RULE_PATTERN): Use that from `&make_paragraphs'.
 	($MACRO_PATTERN): Just catch the name of a macro.
